Add product to Swagger
