# pkg/routes/ordine.go
@@ -7,10 +7,10 @@ import (
 )
 
 func OrdineRoutes(r *gin.Engine) {
-	r.GET("/ordine", controllers.GetOrdines)
-	r.GET("/ordine/:id", controllers.GetOrdine)
-	r.POST("/ordine", controllers.PostOrdine)
-	r.POST("/ordine/:id/products", controllers.PostProductsToOrdine)
-	r.PUT("/ordine/:id", controllers.PutOrdine)
-	r.DELETE("/ordine/:id", controllers.DeleteOrdine)
+	r.GET("/ordines", controllers.GetOrdines)
+	r.GET("/ordines/:id", controllers.GetOrdine)
+	r.POST("/ordines", controllers.PostOrdine)
+	r.POST("/ordines/:id/products", controllers.PostProductsToOrdine)
+	r.PUT("/ordines/:id", controllers.PutOrdine)
+	r.DELETE("/ordines/:id", controllers.DeleteOrdine)
 }
